# GREBE

./: README.md  kernel.patch
analyzer/: Dockerfile  Makefile  README.md  get_cg.py  run.sh  run_analyze.py
analyzer/src/lib/: Annotation.cc  Annotation.h  CMakeLists.txt  CallGraph.h  Common.h  CrashAnalyzer.cc  CrashAnalyzer.h  GlobalCtx.h  KAMain.cc  PointerAnalysis.cc  PointerAnalysis.h  StructFinder.cc  StructFinder.h
fuzzer/: .gitignore  TODO.md
fuzzer/executor/: executor.cc  executor_linux.h
fuzzer/pkg/ipc/: ipc.go
fuzzer/pkg/rpctype/: rpctype.go
fuzzer/pkg/signal/: signal.go
fuzzer/prog/: mutation.go  prio.go  prog.go  rand.go
fuzzer/syz-fuzzer/: fuzzer.go  proc.go  workqueue.go
fuzzer/syz-manager/: manager.go  rpc.go  stats.go
fuzzer/tools/kernel-structure-analyzer/: Makefile  Makefile.inc  resolve_map.py  z_score_calc.py
fuzzer/tools/kernel-structure-analyzer/data/: allyes.info  block_st.txt  page_ranks.out  ranks  struct_map.txt  z_score.out
fuzzer/tools/kernel-structure-analyzer/src/: CMakeLists.txt
fuzzer/tools/kernel-structure-analyzer/src/lib/: CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.h  Global.h  KAMain.cc  StructFinder.cc  StructFinder.h  resolve_map.py
fuzzer/tools/syz-mutate/: log  mutate.go  syz-crypto  syz-crypto2  syz1  zzz
fuzzer/tools/syz-mutate/splice/: README.md  input  splice.go
fuzzer/tools/syz-mutate/splice/test/: sss.go
fuzzer/tools/syz-repro-ok/: fixed_bugs.db  get_reports.py  invalid_bugs.db  repro_ok.go  triage_reports.py
gcc-9.3.0/: .gitignore  README.md
gcc-9.3.0/gcc/: sancov.c  sanitizer.def
(+11 files in other folders)
